--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EchoGuessr</title>
+    <title>NoiseGuessr</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
         .hidden { display: none; }
     </style>
 </head>
 <body>
-    <h1>🔊 EchoGuessr</h1>
+    <h1>🔊 NoiseGuessr</h1>
     <p>Ouça o som e tente adivinhar de onde ele vem!</p>
     <button id="playSound">🔊 Reproduzir Som</button>
     <div id="choices"></div>
